# StatusPage

./: .gitignore  .prettierrc.json  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  sync-version.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish_and_release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_action.rs  commands.rs  main.rs  models.rs
src/Defaults/: DefaultMosaicState.ts
src/components/: TileSettingsForm.tsx
src/components/dashboard-dnd-compontents/: testcomp.tsx
src/components/layout/: index.tsx
src/components/mozaic/: MosaicDrawer.tsx  MosaicDropOverlay.tsx  ZeroState.tsx
src/components/mozaic/Windows/: DetailsView.tsx  DevView.tsx  GraphView.tsx  SummaryView.tsx  WelcomeScreen.tsx
src/components/mozaic/Windows/Graphs/: Bar.tsx  GraphFactory.tsx  Pie.tsx
src/components/navbar/: index.tsx
src/components/overlays/: FormDialogPortal.tsx  SettingsDialogPortal.tsx  ToastPortal.tsx
src/components/sidebar/: index.tsx
src/components/toast/: index.tsx
src/components/ui/: accordion.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  tabs.tsx
src/context/: FormDialogContext.tsx  MosaicContext.tsx  MosaicDrawerContext.tsx  RefreshContext.tsx  apiContext.tsx  toastContext.tsx
src/defaults/: DefaultMosaicLayout.ts  DefaultMosaicState.ts
src/enums/: apiActions.enum.ts
src/interfaces/: component.interface.ts  page.interface.ts  statusPageData.interface.ts
src/models/: apiResponse.ts
src/pages/Home/: custom-mosaic-styles.css  index.css  index.tsx
src/pages/Settings/: index.tsx
src/providers/: routeProvider.ts
src/store/: apiDataStore.ts  apiSettingsStore.ts  dndStore.ts  formDialogStore.ts  mosaicStore.ts  refreshStore.ts  settingsDialogStore.ts  statusPageStore.ts  toastStore.ts
src/stores/: useMosaicStore.ts
src/utils/: BaseSettingType.ts  ContentComponentFactory.tsx  StatusIcon.tsx  TypeRegistry.ts  command.enum.ts  storage.ts  types.ts  updater.ts
