[package]
name = "statuspage-app"
version = "0.0.8"
description = "A statuspage app built with Tauri."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
thiserror = "1.0.24"
reqwest = "0.11.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
