[package]
name = "statuspage-collector"
version = "0.0.9"
description = "A statuspage app built with Tauri."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
thiserror = "1.0.24"
reqwest = "0.11.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
